--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,6 @@
 </head>
 <body>
 <main id="app" class="container"></main>
-<script src="build/out.js"></script>
+<script src="out.js"></script>
 </body>
 </html>
